--- a/BlazorProject.Server/BlazorProject.Server.csproj
+++ b/BlazorProject.Server/BlazorProject.Server.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1" />
     <PackageReference Include="BlazorStrap" Version="1.0.0-preview6-13" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="3.0.0-preview6.19307.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview6.19307.2" />
@@ -24,6 +25,10 @@
   <ItemGroup>
     <ProjectReference Include="..\BlazorProject.Client\BlazorProject.Client.csproj" />
     <ProjectReference Include="..\BlazorProject.Shared\BlazorProject.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
