--- a/BlazorProject.Client/BlazorProject.Client.csproj
+++ b/BlazorProject.Client/BlazorProject.Client.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise.Components" Version="0.7.8" />
     <PackageReference Include="Blazorise.Icons.Material" Version="0.7.8" />
     <PackageReference Include="Blazorise.Material" Version="0.7.8" />
     <PackageReference Include="BlazorStrap" Version="1.0.0-preview6-13" />
