--- a/BlazorProject.Server/BlazorProject.Server.csproj
+++ b/BlazorProject.Server/BlazorProject.Server.csproj
@@ -32,4 +32,9 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Watch Include="..\**\*.scss" />
+    <Watch Include="..\**\*.cs" />
+  </ItemGroup>
+
 </Project>
