Implementando target type

--- a/BlazorProject.Server/BlazorProject.Server.csproj
+++ b/BlazorProject.Server/BlazorProject.Server.csproj
@@ -38,4 +38,8 @@
     <Watch Remove="Models\RepositoryContext.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\newModels\" />
+  </ItemGroup>
+
 </Project>
