Criando Pokemon moves -criação dos tms -mudança para DTO

--- a/BlazorProject.Server/BlazorProject.Server.csproj
+++ b/BlazorProject.Server/BlazorProject.Server.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Watch Remove="Models\PokemonTypes.cs" />
     <Watch Remove="Models\RepositoryContext.cs" />
+    <Watch Remove="Models\TmMachines.cs" />
   </ItemGroup>
 
   <ItemGroup>
